// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Root Component Tests Matches Rendered SnapShot 1`] = `
<GridColumnSuccessTest>
  <GridColumn
    className=""
  >
    <div
      className="nwc-grid-col "
    >
      <div>
        Hello
      </div>
    </div>
  </GridColumn>
</GridColumnSuccessTest>
`;

exports[`Root Component Tests Matches Rendered SnapShot 2`] = `
<GridColumnErrorTest>
  <GridColumn
    className=""
  >
    <div
      className="nwc-grid-col "
    >
      <GridColumn
        className=""
      >
        <div
          className="nwc-grid-col "
        >
          Hello
        </div>
      </GridColumn>
    </div>
  </GridColumn>
</GridColumnErrorTest>
`;

exports[`Root Component Tests Matches Shallow SnapShot 1`] = `
<GridColumn
  className=""
>
  <div>
    Hello
  </div>
</GridColumn>
`;

exports[`Root Component Tests Matches Shallow SnapShot 2`] = `
<GridColumn
  className=""
>
  <GridColumn
    className=""
  >
    Hello
  </GridColumn>
</GridColumn>
`;
